@@ -1,3 +1,10 @@
+2002-11-04  Daniel Elstner  <daniel.elstner@gmx.net>
+
+	* src/pcreshell.{cc,h}: Minor code cleanup.  Add a few assertions
+	and a couple of comments.
+
+regexxer 0.1:
+
 2002-11-03  Daniel Elstner  <daniel.elstner@gmx.net>
 
 	* pixmaps/Makefile.am: s/noinst_DATA/dist_noinst_DATA/ so that
